# intelligent-doc-processor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  docker-compose.observability.yml  docker-compose.yml  file:chatmemdb  file:ingestmemdb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0d6b6a43ce06_auth_refresh_tokens_user_fields.py  31e6e26f0c0a_add_chat_session_and_message.py  8250f8aeae41_auth_change_user_field_column_name.py  8ac40f727013_add_user_document_and_chunk_models.py  a1b2c3d4e5f6_add_user_role.py  b2c3d4e5f6a7_add_api_keys.py  b6b2b5e60c1f_add_processing_progress_fields.py  c2d2a370740b_add_file_model.py  c3d4e5f6a7b8_add_fulltext_search.py  cc88bbf67c60_add_chunk_unique_contraint.py
app/: a2a_agent.py  main.py  mcp_server.py
app/core/: auth.py  celery_app.py  config.py  database.py  errors.py  exception_handlers.py  logging.py  rate_limit.py  retry.py  roles.py  sanitize.py  security.py
app/models/: __init__.py  api_key_model.py  chat_message_model.py  chat_session_model.py  chunk.py  document.py  document_model.py  file_model.py  refresh_token_model.py  user.py  user_model.py
app/repositories/: refresh_token_repository.py  user_repository.py
app/schemas/: admin_stats_schema.py  api_key_schema.py  auth_schema.py  chat_schema.py  chat_session_schema.py  chunk_schema.py  document_schema.py  error_schema.py  files_schema.py  search_schema.py
app/services/: api_key_service.py  cache_service.py  chat_service.py  chunk_service.py  embedding_cache.py  embedding_service.py  file_service.py  fulltext_service.py  hybrid_service.py  indexing_pipeline.py  ingestion_pipeline.py  ocr_service.py  rag_service.py  retrieval_service.py  text_service.py  vector_store.py
app/tasks/: document_tasks.py
docker/: Dockerfile  entrypoint.sh
docker/prometheus/: prometheus.yml
docs/: OPERATIONS.md
infra/vector_store/: interfaces.py  qdrant_client.py  qdrant_vector_store.py
scripts/: benchmark_embeddings.py  init_admin.py  test_indexing.py  test_qdrant_store.py
tests/: test_db.py
tests/integration/: test_api_keys.py  test_chat_api.py  test_ingestion_pipeline_integration.py  test_search_cache.py
tests/load/: locustfile.py
tests/unit/: test_admin_stats.py  test_auth.py  test_cache_service.py  test_celery_tasks.py  test_chat_memory.py  test_error_handling.py  test_fulltext_service.py  test_health_probes.py  test_hybrid_service.py  (+4 more)
(+10 files in other folders)
